--- a/.gitignore
+++ b/.gitignore
@@ -144,7 +144,7 @@ dmypy.json
 .pyre/
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
@@ -155,3 +155,5 @@ dmypy.json
 .history
 
 # End of https://www.gitignore.io/api/python,linux,visualstudiocode
+
+test_files/
